<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgc"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColorHint="?attr/tC"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:text="123456"
                    android:textColor="?attr/tC"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:textColorHint="?attr/tC"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="First Name"
                    android:inputType="text"
                    android:text="123456789"
                    android:textColor="?attr/tC"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:textColorHint="?attr/tC"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:text="123456789"
                    android:textColor="?attr/tC"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:textColorHint="?attr/tC"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etICNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="IC Number"
                    android:inputType="phone"
                    android:text="123456789"
                    android:textColor="?attr/tC"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:textColorHint="?attr/tC"
                app:layout_constraintBottom_toTopOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:text="123456789"
                    android:textColor="?attr/tC"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/theme_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme:"
                android:textSize="20sp"
                android:textColor="?attr/tC"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout8"
                android:layout_marginStart="18dp"
                app:layout_constraintBottom_toTopOf="@id/btnEdit"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/theme_label"
                app:layout_constraintTop_toTopOf="@id/theme_label"
                app:layout_constraintBottom_toBottomOf="@id/theme_label"
                android:layout_marginStart="10dp" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="Edit Profile"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_32sdp"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:text="Sign Out"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:text="Profile"
                android:textColor="?attr/tC"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>